I think this is the bulk of the backend changes for grouped outputs.
